# Muharrik

./: .gitignore  .gitmodules  CMakeLists.txt  build_package.sh  build_solution.bat  build_solution.sh  check_dependencies.sh  gen_build_solution.bat  gen_build_solution.sh  nuke_gen_build_solution.bat  nuke_gen_build_solution.sh  profile_tracy.sh  run.bat  run_instruments_analysis.sh  run_mac_mem.sh  versions.txt
cmake/: Packaging.cmake
src/: main.cpp
src/Engine/: ecs.cpp  ecs.h  engine.cpp  engine.h  sdl.cpp  sdl.h
src/Engine/AssetManager/: SpriteAssetManager.cpp  SpriteAssetManager.h  SpriteSerializedData.h  TextureAssetManager.cpp  TextureAssetManager.h
src/Engine/Components/: fov.h  position2D.h  rotation2D.h  scale2D.h  sdldata.h
src/Engine/Config/: MuharrikConfig.h
src/Engine/Core/: IGame.h  engine.cpp  engine.h  engine.inl  factory.cpp  factory.h
src/Engine/Display/: RmlSystemInterface.h  renderer2D.cpp  renderer2D.h  sdl.cpp  sdl.h
src/Engine/ECS/: ecs.cpp  ecs.h
src/Engine/Entities/: camera2D.cpp  camera2D.h  entities.h  sprite.cpp  sprite.h
src/Engine/Input/: InputBindings.h  InputHandler.cpp  InputHandler.h
src/Engine/LLM/: LlamaInfer.cpp  LlamaInfer.h
src/Engine/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/Engine/Scene/: SceneManager.cpp  SceneManager.h  scene.cpp  scene.h
src/Engine/Util/: eastl_vector_util.h
src/Game/: GameLoop.cpp  GameLoop.h  GameScenes.cpp  GameScenes.h
src/content/engine/UI/: hud.rml
